--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -1,6 +1,6 @@
 .footer {
   width: 100%;
-  height: 200px;
+  min-height: 200px;       /* allow flexible height instead of forced 200px */
   background: #000000;
   display: flex;
   justify-content: center;
@@ -8,7 +8,7 @@
   flex-direction: column;
   padding-top: 10px;
   padding-bottom: 10px;
-  margin-top: 200px;
+  margin-top: 0;           /* FIX: removes the big white gap above the footer */
 }
 
 .socialMedia a,
@@ -39,6 +39,7 @@
     padding-top: 30px;
     padding-bottom: 30px;
   }
+
   .footer svg {
     font-size: 50px;
   }
